# zkWasm

./: .gitignore  .gitmodules  Cargo.toml  mock.sh  poseidon_pc_test.sh  poseidon_test.sh  press.sh  run.sh  setup.sh  sha256_test.sh  test_cli.sh  test_cli_checksum.sh  test_db_cache.sh
crates/cli/src/: app_builder.rs  command.rs  config.rs  exec.rs  file_backend.rs  main.rs  names.rs  utils.rs
crates/host/src/: lib.rs
crates/specs/src/: brtable.rs  etable.rs  imtable.rs  itable.rs  jtable.rs  lib.rs  slice.rs  state.rs  step.rs
crates/zkwasm/: Cargo.toml
crates/zkwasm/src/: lib.rs
demo/: sync.sh
specs/: Cargo.toml
specs/src/: mtable.rs
specs/src/encode/: mod.rs
src/: lib.rs
src/bench/: binary_search.rs
src/circuits/: checksum.rs  config.rs  imtable.rs  intable.rs  itable.rs  jtable.rs  mod.rs  mtable_compact.rs  rtable.rs
src/circuits/brtable/: assign.rs  configure.rs  mod.rs
src/circuits/etable/: assign.rs  mod.rs
src/circuits/etable_compact/: assign.rs
src/circuits/jtable/: configure.rs
src/cli/: app_builder.rs  args.rs  command.rs  exec.rs  run.rs
src/foreign/: mod.rs
src/runtime/: mod.rs  wasmi_interpreter.rs
src/test/: mod.rs  test_binary_search_64.rs  test_circuit_builder.rs  test_fibonacci.rs  test_method_dispatch.rs
wasm/: method.wasm  mock_deposit_100.wasm  mock_funding_100.wasm  mock_oracle_100.wasm  mock_trade_1.wasm  mock_trade_100.wasm  zkdex_mock_100_deposit.wasm  zkdex_mock_50_deposit.wasm  zkdex_mock_no_trade.wasm  zkdex_mock_origin.wasm  zkdex_wasm_bg_opt.wasm  zkdex_wasm_mock_bg_opt.wasm  zkdex_wasm_sha256.wasm
(+77 files in other folders)
