[workspace]
members = ["crates/specs", "crates/zkwasm", "crates/cli", "crates/host"]
exclude = ["third-party/wasmi", "crates/playground"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
cfg-if = "1.0.0"
halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", features = ["unsafe"] }
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
parity-wasm = { version = "0.42.0", features = ["sign_ext"] }
wasmi = { path = "third-party/wasmi" }
circuits-batcher = { git = "https://github.com/DelphinusLab/continuation-batcher.git" }
zkwasm-host-circuits = { git = "https://github.com/DelphinusLab/zkWasm-host-circuits.git", branch="synthesize-helper" }

[profile.dev]
opt-level = 3

[patch."https://github.com/DelphinusLab/continuation-batcher.git"]
circuits-batcher = { git = "https://github.com/okx/continuation-batcher.git", branch = "main-okx-new" }

[patch."https://github.com/okx/zkWasm-prover.git"]
zkwasm-prover = { path = "../zkWasm-prover-perf" }